[project]
name = "rknn_model_convert"
description = "rknn 模型转换"
authors = []
version = "0.0.1"
keywords = ["rknn", "convert"]
requires-python = ">=3.12,<3.13"
dependencies = [
    "setuptools",
    "PyYAML",
    "loguru",
	"rknn-toolkit2",
]

[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
