[project]
name = "rknn_model_convert"
description = "rknn 模型转换 for rk3399proD"
authors = []
version = "0.0.1"
keywords = ["rknn", "convert"]
requires-python = ">=3.8,<3.9"
dependencies = [
    "PyYaml",
    "setuptools",
    "loguru",
    "tensorflow==2.4.0",
    "torch==1.10.0",
    "torchvision==0.11.0",
    "mxnet==1.5.0",
    "numpy==1.19.5",
    "protobuf==3.20.3",
]

[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
